--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -6,15 +6,17 @@
 	<% if @applies.present? %>
 		<% @applies.each_with_index do |apply, index| %>
 			<div class="frame">
-				<div class="row text-center">
-					<div class="col-xs-4 no-padding">
+				<div class="clearfix text-center">
+					<div class="col-xs-4 no-padding train-name">
 						<span><%= index + 1%>. <%= apply.train_name %></span>
 					</div>
 					<div class="col-xs-4 no-padding">
 						<span><%= apply.updated_at.strftime("%F") %></span>
 					</div>
 					<div class="col-xs-4 no-padding">
-						<button class="btn btn-default cancel-btn">取消报名</button>
+						<%= link_to wechat_apply_path(apply), method: :delete, data: { confirm: '您要取消报名《#{apply.name}》课程吗？' }  do %>
+							<button class="btn btn-danger btn-sm cancel-btn">取消报名</button>
+						<% end %>
 					</div>
 				</div>
 			</div>
