--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -10,9 +10,7 @@
 		margin: 0;
 	}
 	.my-ul{
-		position:fixed;
-		bottom:20px;
-		left:40%;
+		padding-bottom: 10px;
 		padding-left: 0;		
 		list-style: none;	
 		ul li{
