--- a/app/views/wechat/applies/home.html.erb
+++ b/app/views/wechat/applies/home.html.erb
@@ -5,7 +5,7 @@
 				<botton class="btn btn-default my-btn">
 					我要报名
 					<div class="my-icon">
-						<%=image_tag"apply_icon.png",width:"10px%"%>
+						<%=image_tag"apply_icon.png",width:"10px"%>
 					</div>	
 				</botton>
 			<% end %>
