--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -65,16 +65,19 @@
 		<%= simple_form_for([:wechat, @apply], html: {class: "form-horizontal"}, wrapper: :wechat_apply_form) do |f| %>
 			<%= f.hidden_field :openid, value: session[:openid] %>
 			<%= f.hidden_field :way %>
-			<%= f.hidden_field :train_name %>
-			<%= f.input :name, label: false, placeholder: "姓名＊", wrapper_html: {class: 'col-xs-9 no-padding'} %>
-			<%= f.input :sex, collection: Apply::SEX.invert, wrapper_html: {class: 'col-xs-3 no-padding'} %>
-			<%= f.input :phone, label: false, placeholder: "手机＊" %>
-			<%= f.input :qq, label: false, placeholder: "QQ＊" %>
-			<%= f.input :email, label: false, placeholder: "邮箱＊" %>
-			<%= f.input :address, label: false, placeholder: "地址＊" %>
-			<%= f.input :situation, collection: Apply::SITUATION, wrapper_html: {class: 'col-xs-6 no-padding'}, placeholder: "目前状态" %>
-			<%= f.input :degree, collection: Apply::DEGREE, wrapper_html: {class: 'col-xs-6 no-padding'}, placeholder: "教育状况" %>
-			<%= f.input :school_name, label: false, placeholder: "最高院校" %>
+			<%= f.hidden_field :train_name %> 
+			<%= f.input :name, placeholder: "姓名＊", wrapper_html: {class: 'col-xs-7 no-padding'} %>
+			<label class="col-xs-2 no-padding">性别*</label>
+			<%= f.input :sex, collection: Apply::SEX.invert, wrapper_html: {class: 'col-xs-3 no-padding'}, label: "性别*" %>
+			<%= f.input :phone, placeholder: "手机＊" %>
+			<%= f.input :qq, placeholder: "QQ＊" %>
+			<%= f.input :email, placeholder: "邮箱＊" %>
+			<%= f.input :address, placeholder: "地址＊" %>
+			<div class="row">
+				<%= f.input :situation, collection: Apply::SITUATION, wrapper_html: {class: 'col-xs-6 '}, placeholder: "目前状态" %>
+				<%= f.input :degree, collection: Apply::DEGREE, wrapper_html: {class: 'col-xs-6 '}, placeholder: "教育状况" %>
+			</div>
+			<%= f.input :school_name, placeholder: "最高院校" %>
 			<botton class="btn btn-default my-btn" type="submit">
 				提交信息
 				<div class="my-icon">
