--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -78,12 +78,7 @@
 				<%= f.input :degree, collection: Apply::DEGREE, wrapper_html: {class: 'col-xs-6 '}, placeholder: "教育状况" %>
 			</div>
 			<%= f.input :school_name, placeholder: "最高院校" %>
-			<botton class="btn btn-default my-btn" type="submit">
-				提交信息
-				<div class="my-icon">
-					<%=image_tag"apply_icon.png",width:"10px"%>
-				</div>	
-			</botton>
+			<botton class="btn btn-default my-btn"><div class="text-left">&nbsp;&nbsp;提交信息</div></botton>
 		<% end %><!-- end: 报名表单 -->
 	</div>
 	<ul class="my-ul text-center">
