--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -6,6 +6,9 @@
 	.no-padding{
 		padding: 0;
 	}
+	.margin-b-10{
+		margin-bottom: 10px !important;
+	}
 	.no-margin{
 		margin: 0;
 	}
@@ -55,9 +58,6 @@
 			background-position: 95% 50%;
 		}
 	}
-	.form-group{
-		margin: 0;		
-	}
 	img{
 		padding-top: 10px;
 		padding-bottom: 10px;
@@ -84,7 +84,6 @@
 	/**wechat/applies/index**/
 	.main{
 		width: 100%;
-		height: 73%;
 		padding: 20px;
 		overflow: auto;
 		.my-title{
@@ -92,8 +91,7 @@
 			padding-bottom:10px; 
 		}
 		.train-name{
-			text-align: left;
-			text-indent: 32px;
+			text-align: center;
 		}
 	}
 	/**wecaht/applies/new**/
