--- a/app/views/wechat/applies/show.html.erb
+++ b/app/views/wechat/applies/show.html.erb
@@ -16,15 +16,15 @@
 			<%= f.input :qq, label: false, placeholder: "QQ＊", wrapper_html: {class: 'col-xs-6 no-padding'} %>
 			<%= f.input :email, label: false, placeholder: "邮箱＊" %>
 			<%= f.input :address, label: false, placeholder: "地址＊" %>
-			<%= f.input :situation, collection: Apply::SITUATION, wrapper_html: {class: 'col-xs-6 no-padding'}, placeholder: "目前状态" %>
-			<%= f.input :degree, collection: Apply::DEGREE, wrapper_html: {class: 'col-xs-6 no-padding'}, placeholder: "教育状况" %>
+			<%= f.input :situation, wrapper_html: {class: 'col-xs-6 no-padding'}, placeholder: "目前状态" %>
+			<%= f.input :degree, wrapper_html: {class: 'col-xs-6 no-padding'}, placeholder: "教育状况" %>
 			<%= f.input :school_name, label: false, placeholder: "最高院校" %>
 			<%= f.input :way, label: false, placeholder: "了解渠道＊", wrapper_html: {class: 'col-xs-6 no-padding'} %>
 			<%= f.input :train_name, wrapper_html: {class: 'col-xs-6 no-padding'} %>
 		<% end %><!-- end: 报名表单 -->
 	</div>
 	<ul class="my-ul text-center">
-		<li>><%= link_to("返回报名页面", wechat_root_path) %></li>
+		<li><%= link_to("返回报名页面", wechat_root_path(openid: session[:openid])) %></li>
 	</ul>
 </div><!-- end: 填写个人信息 -->
 <script>
