modify index style

--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -91,7 +91,8 @@
 			padding-bottom:10px; 
 		}
 		.train-name{
-			text-align: center;
+			text-align: left;
+			text-indent: 10px;
 		}
 	}
 	/**wecaht/applies/new**/
