--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -70,7 +70,7 @@
 			<label class="col-xs-2 no-padding">性别*</label>
 			<%= f.input :sex, collection: Apply::SEX.invert, wrapper_html: {class: 'col-xs-2 no-padding'}, label: "性别*" %>
 
-			<div class="col-xs-1 no-padding my-border" id="bsex">男</div>
+			<div class="col-xs-1 no-padding my-border wcolor" id="bsex">男</div>
 			<div class="col-xs-1 no-padding my-border" id="gsex">女</div>
 
 			<%= f.input :phone, placeholder: "手机＊" %>
