--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -70,7 +70,7 @@
 			<label class="col-xs-2 no-padding">性别*</label>
 			<%= f.input :sex, collection: Apply::SEX.invert, wrapper_html: {class: 'col-xs-2 no-padding'}, label: "性别*" %>
 
-			<div class="col-xs-1 no-padding my-border wcolor" id="bsex">男</div>
+			<div class="col-xs-1 no-padding my-border wcolor " id="bsex">男</div>
 			<div class="col-xs-1 no-padding my-border" id="gsex">女</div>
 
 			<%= f.input :phone, placeholder: "手机＊" %>
@@ -78,8 +78,8 @@
 			<%= f.input :email, placeholder: "邮箱＊" %>
 			<%= f.input :address, placeholder: "地址＊" %>
 			<div class="row">
-				<%= f.input :situation, collection: Apply::SITUATION, wrapper_html: {class: 'col-xs-6 '}, placeholder: "目前状态" %>
-				<%= f.input :degree, collection: Apply::DEGREE, wrapper_html: {class: 'col-xs-6 '}, placeholder: "教育状况" %>
+				<%= f.input :situation, collection: Apply::SITUATION, wrapper_html: {class: 'col-xs-6 rpadding'}, placeholder: "目前状态" %>
+				<%= f.input :degree, collection: Apply::DEGREE, wrapper_html: {class: 'col-xs-6 lpadding'}, placeholder: "教育状况" %>
 			</div>
 			<%= f.input :school_name, placeholder: "最高院校" %>
 			<%= f.button :button, class: "my-btn" do %>
