--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -139,14 +139,12 @@
 			background-color: #FFEE00;
 			color:#fff;
 			border:2px #FFEE00 solid;
-			padding:5px;
+			padding:6px 5px;
+			margin: 3px 0;
 		}
 		.wcolor{
 			background-color:#fff;
 			color:#000;
-			border:2px #FFEE00 solid;
-			padding:5px;
-
 		}
 
 	}
