--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -14,7 +14,7 @@
 						<span><%= apply.updated_at.strftime("%F") %></span>
 					</div>
 					<div class="col-xs-4 no-padding">
-						<%= link_to wechat_apply_path(apply), method: :delete, data: { confirm: '您要取消报名《#{apply.name}》课程吗？' }  do %>
+						<%= link_to wechat_apply_path(apply), method: :delete, data: { confirm: '您要取消报名该课程吗？' }  do %>
 							<button class="btn btn-danger btn-sm cancel-btn">取消报名</button>
 						<% end %>
 					</div>
