--- a/app/views/wechat/applies/home.html.erb
+++ b/app/views/wechat/applies/home.html.erb
@@ -3,10 +3,8 @@
 		<div class="col-xs-12 text-center content">
 			<%= link_to new_wechat_apply_path do %>
 				<botton class="btn btn-default my-btn"><div class="text-left">&nbsp;&nbsp;我要报名</div></botton>
-			<% end %>
-			<ul class="my-ul">
-				<li><%= link_to("历史报名情况", wechat_applies_path ) %></li>
-			</ul>	
+			<% end %>	
+			<div class="col-xs-12 turn-back"><%= link_to("历史报名情况", wechat_applies_path ) %></div>
 		</div>	
 	</div>
 </div>
