--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -2,10 +2,10 @@
 <div class="container my-main"  id="my_way">
 	<div class="my-row text-center clearfix">
 		<div class="text-center">
-			<%=image_tag"apply2.png",width:"90%"%>
+			<%=image_tag"apply2.png",width:"90%" %>
 		</div>
-		<p class="text-center my-p">您好，欢迎参加全栈工程师的培训<br>为了让你能更好的参加培训<br>请认真填写一下信息</p>
-		<h3 class="text-center">您是如何知道我们的 ？</h3>
+		<h3 class="text-center my-p">您好，欢迎参加全栈工程师的培训<br>为了让你能更好的参加培训<br>请认真填写一下信息</h3>
+		<h3 class="text-center"><strong>您是如何知道我们的 ？</strong></h3>
 		<div class="col-xs-12 frame">
 			<div class="way">老师推荐</div>
 		</div>
@@ -22,12 +22,8 @@
 			<div class="way">其他</div>
 		</div>
 		<button type="button" class="btn btn-lg btn-block my-lg new1">下一步</button>
-		<ul class="my-ul text-center">
-			<li>
-				<a href="javascript: void(0);" onclick="javascript:history.back(-1);">返回上一页</a>
-			</li>
-		</ul>
 	</div>
+	<div class="col-xs-12 turn-back"><a href="javascript: void(0);" onclick="javascript:history.back(-1);">返回上一页</a></div>
 </div><!-- end: 选择了解渠道 -->
 
 <!-- begin: 选择报名的课程 -->
@@ -36,8 +32,8 @@
 		<div class="text-center">
 			<%=image_tag"apply2.png",width:"90%"%>
 		</div>
-		<p class="text-center my-p">您好，欢迎参加全栈工程师的培训<br>为了让你能更好的参加培训<br>请认真填写一下信息</p>
-		<h3>请选择一门意向课程</h3>
+		<h3 class="text-center my-p">您好，欢迎参加全栈工程师的培训<br>为了让你能更好的参加培训<br>请认真填写以下信息</h3>
+		<h3><strong>请选择一门意向课程</strong></h3>
 		<div class="col-xs-12 frame">
 			<div class="course">ios开发</div>
 		</div>
@@ -49,9 +45,7 @@
 		</div>	
 		<button type="button" class="btn btn-lg btn-block my-lg new2">下一步</button>
 	</div>
-	<ul class="my-ul text-center">
-		<li><a href="javascript: void(0);" id="back-way">返回上一页</a></li>
-	</ul>
+	<div class="col-xs-12 turn-back"><a href="javascript: void(0);" id="back-way">返回上一页</a></div>
 </div><!-- end: 选择报名的课程 -->
 
 <!-- begin: 填写个人信息 -->
@@ -60,15 +54,13 @@
 		<div class="text-center">
 			<%=image_tag"apply2.png",width:"90%"%>
 		</div>
-		<h3>在线报名</h3>
+		<h3><strong>在线报名</strong></h3>
 		<!-- begin: 报名表单 -->
 		<div id="apply_form">
 			<%= render partial: "form" %>
 		</div><!-- end: 报名表单 -->
+		<div class="col-xs-12 turn-back"><a href="javascript: void(0);" id="back-course">返回上一页</a></div>
 	</div>
-	<ul class="my-ul text-center">
-		<li><a href="javascript: void(0);" id="back-course">返回上一页</a></li>
-	</ul>
 </div><!-- end: 填写个人信息 -->
 
 <!-- js -->
