modify worktrains/index.html.erb and worktrains.scss

--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -1,2 +1,92 @@
-<h1>Worktrains#index</h1>
-<p>Find me in app/views/worktrains/index.html.erb</p>
+<%=image_tag"workt-banner.png",width:"100%"%>
+<div class="container">
+	<div class="row">
+		<div class="title-bar col-md-12">
+			<h4 class="text-center title">职前培训</h4>
+			<div class="line"></div>
+		</div>
+	</div>
+	<div class="row">
+	  <div class="col-md-4 courses_tent">
+      <div class="bordered">
+        <%= image_tag("workt3.png", class: "img-responsive")%>
+        <div class="col-sm-12 mt-10">
+          <h4>我是课程名称</h4>
+          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+        </div>
+        <div class="col-sm-12 infos">
+          <span class="glyphicon glyphicon-eye-open"></span> 1549
+          &nbsp;&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+        </div>
+      </div>
+      <div class="bordered">
+        <%= image_tag("workt1.png", class: "img-responsive")%>
+        <div class="col-sm-12 mt-10">
+          <h4>我是课程名称</h4>
+          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+        </div>
+        <div class="col-sm-12 infos">
+          <span class="glyphicon glyphicon-eye-open"></span> 1549
+          &nbsp;&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+        </div>
+      </div>
+    </div>
+		<div class="col-md-4 courses_tent">
+      <div class="bordered">
+        <%= image_tag("workt2.png", class: "img-responsive")%>
+        <div class="col-sm-12 mt-10">
+          <h4>我是课程名称</h4>
+          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+        </div>
+        <div class="col-sm-12 infos">
+          <span class="glyphicon glyphicon-eye-open"></span> 1549
+          &nbsp;&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+        </div>
+      </div>
+      <div class="bordered">
+        <%= image_tag("workt3.png", class: "img-responsive")%>
+        <div class="col-sm-12 mt-10">
+          <h4>我是课程名称</h4>
+          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+        </div>
+        <div class="col-sm-12 infos">
+          <span class="glyphicon glyphicon-eye-open"></span> 1549
+          &nbsp;&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+        </div>
+      </div>
+    </div>
+		<div class="col-md-4 courses_tent">
+      <div class="bordered">
+        <%= image_tag("workt1.png", class: "img-responsive")%>
+        <div class="col-sm-12 mt-10">
+          <h4>我是课程名称</h4>
+          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+        </div>
+        <div class="col-sm-12 infos">
+          <span class="glyphicon glyphicon-eye-open"></span> 1549
+          &nbsp;&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+        </div>
+      </div>
+      <div class="bordered">
+        <%= image_tag("workt3.png", class: "img-responsive")%>
+        <div class="col-sm-12 mt-10">
+          <h4>我是课程名称</h4>
+          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+        </div>
+        <div class="col-sm-12 infos">
+          <span class="glyphicon glyphicon-eye-open"></span> 1549
+          &nbsp;&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12">
+    	<button class="btn btn-default btn-lg next-btn">加载下一页...</button>
+    </div>
+	</div>
+</div>
