--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -3,27 +3,10 @@
 		<%=image_tag"apply2.png",width:"90%"%>
 	</div>
 	<h3 class="my-title text-center">您的历史报名纪录</h3>
-	<% if @applies.present? %>
-		<% @applies.each_with_index do |apply, index| %>
-			<div class="frame margin-b-10">
-				<div class="clearfix text-center">
-					<div class="col-xs-4 no-padding train-name">
-						<span><%= index + 1%>. <%= apply.train_name %></span>
-					</div>
-					<div class="col-xs-4 no-padding">
-						<span><%= apply.updated_at.strftime("%F") %></span>
-					</div>
-					<div class="col-xs-4 no-padding">
-						<%= link_to wechat_apply_path(apply), method: :delete, data: { confirm: '您要取消报名该课程吗？' }  do %>
-							<button class="btn btn-danger btn-sm cancel-btn">取消报名</button>
-						<% end %>
-					</div>
-				</div>
-			</div>
-		<% end %>
-	<% else %>
-		<h4 class="text-center text-info">没有报名记录，赶快去报名吧！</h3>
-	<% end %>
+	<!-- 加载当前学生的报名记录 -->
+	<div id="apply_list">
+		<%= render partial: "apply_list" %>
+	</div>
 	<div class="col-xs-12 turn-back"><a href="javascript: void(0);" onclick="javascript:history.back(-1);">返回上一页</a></div>
 </div>	
 
