add applies to admin

--- a/app/views/wechat/applies/_data.html.erb
+++ b/app/views/wechat/applies/_data.html.erb
@@ -16,16 +16,17 @@
 		</tr>
 	</thead>
 	<tbody>
-		<% @applies.each_with_index do |apply, index| %>
+		<% applies.each_with_index do |apply, index| %>
 		<tr>
 			<th><%= index + 1 %></th>
 			<td><%= apply.name %></td>
-			<td><%= apply.sex %></td>
+			<td><%= Apply::SEX[apply.sex.to_sym] %></td>
 			<td><%= apply.phone %></td>
 			<td><%= apply.qq %></td>
 			<td><%= apply.email %></td>
 			<td><%= apply.address %></td>
-			<td><%= apply.situation %></td>
+			<td><%= Apply::SITUATION[apply.situation.to_sym] %></td>
+			<td><%= Apply::DEGREE[apply.degree.to_sym] %></td>
 			<td><%= apply.school_name %></td>
 			<td><%= apply.way %></td>
 			<td><%= apply.train_name %></td>
