--- a/app/views/wechat/applies/data.html.erb
+++ b/app/views/wechat/applies/data.html.erb
@@ -1,24 +1,37 @@
 <div class="container">
-	<div>
-		<!-- Nav tabs -->
-		<ul class="nav nav-tabs" role="tablist">
-			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">ios</a></li>
-			<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">android</a></li>
-			<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">web</a></li>
-		</ul>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="">Brand</a>
+			</div>
 
-		<!-- Tab panes -->
-		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane active" id="home">
-				<%= render partial: "data" %>
-			</div>
-			<div role="tabpanel" class="tab-pane" id="profile">
-				<%= render partial: "data" %>
-			</div>
-			<div role="tabpanel" class="tab-pane" id="messages">
-				<%= render partial: "data" %>
-			</div>
-		</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">全部学员</a></li>
+					<li><a href="#">ios开发</a></li>
+					<li><a href="#">安卓开发</a></li>
+					<li><a href="#">WEB全栈</a></li>
+				</ul>
+				<form class="navbar-form navbar-right" role="search">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="输入姓名查找">
+					</div>
+					<button type="submit" class="btn btn-default">搜索</button>
+				</form>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 
+	<div id="apply_data">
+		<%= render partial: "data", locals: { applies: @applies } %>
 	</div>
 </div>
+
