finish applies#index

--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -6,16 +6,16 @@
 			<%end%>
 		</li>
 
-                <li>
-                  <%= link_to admin_recruitments_path do %>
-                    <span class="glyphicon glyphicon-tag"></span> 招聘列表
-                  <%end%>
-                </li>
-                 <li>
-                  <%= link_to admin_companies_path do %>
-                    <span class="glyphicon glyphicon-briefcase"></span> 公司列表
-                  <%end%>
-                </li>
+		<li>
+			<%= link_to admin_recruitments_path do %>
+				<span class="glyphicon glyphicon-tag"></span> 招聘列表
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_companies_path do %>
+				<span class="glyphicon glyphicon-briefcase"></span> 公司列表
+			<%end%>
+		</li>
 
 		<li>
 			<%= link_to admin_categories_path do %>
@@ -23,14 +23,19 @@
 			<%end%>
 		</li>
 		<li>
-      <%= link_to admin_teachers_path do %>
-        <span class="glyphicon glyphicon-user"></span> 教师列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_courses_path do %>
-        <span class="glyphicon glyphicon-tasks"></span> 课程列表
-      <%end%>
-    </li>
+			<%= link_to admin_teachers_path do %>
+				<span class="glyphicon glyphicon-user"></span> 教师列表
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_courses_path do %>
+				<span class="glyphicon glyphicon-tasks"></span> 课程列表
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_applies_path do %>
+				<span class="glyphicon glyphicon-list-alt"></span> 报名统计
+			<% end %>
+		</li>
 	</ul>
 </div>
