--- a/app/views/admin/applies/_data.html.erb
+++ b/app/views/admin/applies/_data.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<table class="table table-striped table-bordered table-condensed">
 	<thead>
 		<tr>
 			<th>序号</th>
