complete applies data export to excel

--- a/app/assets/stylesheets/admin/main.css.scss
+++ b/app/assets/stylesheets/admin/main.css.scss
@@ -115,12 +115,12 @@ footer{
   min-height: 90%;
   overflow: hidden;
 }
-table {
-  table-layout: fixed;
-  width: 100%;
- #description  {
-  white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-  }
-}
+// table {
+//   table-layout: fixed;
+//   width: 100%;
+//  #description  {
+//   white-space: nowrap;
+//             overflow: hidden;
+//             text-overflow: ellipsis;
+//   }
+// }
