--- a/app/views/admin/applies/_data.html.erb
+++ b/app/views/admin/applies/_data.html.erb
@@ -1,36 +1,38 @@
-<table class="table table-striped table-bordered table-condensed">
-	<thead>
-		<tr>
-			<th>序号</th>
-			<th>姓名</th>
-			<th>性别</th>
-			<th>手机号码</th>
-			<th>QQ</th>
-			<th>邮箱</th>
-			<th>地址</th>
-			<th>就业状况</th>
-			<th>教育状况</th>
-			<th>最高毕业院校</th>
-			<th>了解渠道</th>
-			<th>报名课程</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% applies.each_with_index do |apply, index| %>
-		<tr>
-			<th><%= index + 1 %></th>
-			<td><%= apply.name %></td>
-			<td><%= Apply::SEX[apply.sex.to_sym] %></td>
-			<td><%= apply.phone %></td>
-			<td><%= apply.qq %></td>
-			<td><%= apply.email %></td>
-			<td><%= apply.address %></td>
-			<td><%= Apply::SITUATION[apply.situation.to_sym] %></td>
-			<td><%= Apply::DEGREE[apply.degree.to_sym] %></td>
-			<td><%= apply.school_name %></td>
-			<td><%= apply.way %></td>
-			<td><%= apply.train_name %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="table-overflow">
+	<table class="table table-striped table-bordered">
+		<thead>
+			<tr>
+				<th>序号</th>
+				<th>姓名</th>
+				<th>性别</th>
+				<th>手机号码</th>
+				<th>QQ</th>
+				<th>邮箱</th>
+				<th>地址</th>
+				<th>就业状况</th>
+				<th>教育状况</th>
+				<th>最高毕业院校</th>
+				<th>了解渠道</th>
+				<th>报名课程</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% applies.each_with_index do |apply, index| %>
+			<tr>
+				<th><%= index + 1 %></th>
+				<td><%= apply.name %></td>
+				<td><%= Apply::SEX[apply.sex.to_sym] %></td>
+				<td><%= apply.phone %></td>
+				<td><%= apply.qq %></td>
+				<td><%= apply.email %></td>
+				<td><%= apply.address %></td>
+				<td><%= Apply::SITUATION[apply.situation.to_sym] %></td>
+				<td><%= Apply::DEGREE[apply.degree.to_sym] %></td>
+				<td><%= apply.school_name %></td>
+				<td><%= apply.way %></td>
+				<td><%= apply.train_name %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
